--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <div class="header"></div>
-        <div class="content"></div>
-        <div class="footer"></div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="header-links">
+        <div>Header Logo</div>
+        <ul>
+          <li><a href="#">header-link-one</a></li>
+          <li><a href="#">header-link-two</a></li>
+          <li><a href="#">headerlink-three</a></li>
+        </ul>
+      </div>
+      <div class="header-hero">
+        <div class="hero-main-text">
+          <div class="hero-title">This website is awesome</div>
+          <p class="hero-text">
+            This website has subtext that goes here under the main title. It's a
+            smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="hero-image">This is a placeholder for an image</div>
+      </div>
+    </div>
+    <div class="information-container">
+      <div class="info-title">Some random information.</div>
+      <div class="info-card">
+        <ul>
+          <div class="info-image"></div>
+          <div class="info-subtext">
+            this is some subtext under an illustration or image
+          </div>
+        </ul>
+        <ul>
+          <div class="info-image"></div>
+          <div class="info-subtext">
+            this is some subtext under an illustration or image
+          </div>
+        </ul>
+        <ul>
+          <div class="info-image"></div>
+          <div class="info-subtext">
+            this is some subtext under an illustration or image
+          </div>
+        </ul>
+        <ul>
+          <div class="info-image"></div>
+          <div class="info-subtext">
+            this is some subtext under an illustration or image
+          </div>
+        </ul>
+      </div>
+    </div>
+    <div class="quote-container">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Mayber it's just filling up space, or maybe
+           people will actually read it. Who knows? All I know is that it looks nice. 
+        </p>
+        <div class="author">-Minh, the one who made this page</div>
+    </div>
+    <div class="footer"></div>
+  </body>
 </html>
