Added call-to-action-banner and footer. Then styled them nicely

--- a/index.html
+++ b/index.html
@@ -60,11 +60,22 @@
       </div>
     </div>
     <div class="quote-container">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Mayber it's just filling up space, or maybe
-           people will actually read it. Who knows? All I know is that it looks nice. 
-        </p>
-        <div class="author">-Minh, the one who made this page</div>
+      <p class="quote">
+        This is an inspiring quote, or a testimonial from a customer. Mayber
+        it's just filling up space, or maybe people will actually read it. Who
+        knows? All I know is that it looks nice.
+      </p>
+      <div class="author">-Minh, the one who made this page</div>
     </div>
-    <div class="footer"></div>
+    <div class="call-to-action-container">
+      <div class="text-container">
+        <div class="call-to-action-title">Call to action! It's time!</div>
+        <p class="call-to-action-text">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <button>Sign up</button>
+    </div>
+    <div class="footer">Copyright &copy; Nguyen Huynh Nhat Minh 2024</div>
   </body>
 </html>
